<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Signin">

    <TextView
        android:id="@+id/textView"
        android:layout_width="260dp"
        android:layout_height="47dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="65dp"
        android:gravity="top"
        android:fontFamily="@font/outfit_bold"
        android:lineHeight="47sp"
        android:text="@string/textview3"
        android:textColor="#000000"
        android:textSize="37sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="271dp"
        android:layout_height="70dp"
        android:layout_marginTop="9dp"
        android:fontFamily="@font/outfit_regular"
        android:gravity="top"
        android:lineHeight="35sp"
        android:text="@string/textview4"
        android:textColor="#000000"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="342dp"
        android:layout_height="49dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="55dp"
        android:background="@drawable/border"
        android:ems="10"
        android:inputType="text"
        android:fontFamily="@font/outfit_regular"
        android:textColorHint="#555454"
        android:textSize="16sp"
        android:paddingStart="14dp"
        android:hint="@string/textview2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="342dp"
        android:layout_height="49dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/border"
        android:ems="10"
        android:fontFamily="@font/outfit_regular"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:textColorHint="#555454"
        android:textSize="16sp"
        android:paddingStart="14dp"
        app:layout_constraintStart_toStartOf="@+id/editTextText"
        app:layout_constraintTop_toBottomOf="@+id/editTextText"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="125dp"
        android:layout_height="19dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="17dp"
        android:fontFamily="@font/outfit_regular"
        android:gravity="top"
        android:text="@string/forgot"
        android:textColor="#000000"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

    <Button
        android:id="@+id/button"
        android:layout_width="342dp"
        android:layout_height="51dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="25dp"
        android:backgroundTint="#000000"
        android:text="@string/button2"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:fontFamily="@font/outfit_medium"
        app:cornerRadius="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="147.5dp"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="6dp"
        app:layout_constraintEnd_toStartOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="@+id/textView8"
        app:srcCompat="@drawable/vector_1" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="18dp"
        android:layout_height="23dp"
        android:layout_marginStart="163dp"
        android:layout_marginTop="19dp"
        android:fontFamily="@font/outfit_medium"
        android:text="@string/or"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="147.5dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:srcCompat="@drawable/vector_1" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="23dp"
        android:layout_height="23dp"
        android:layout_marginStart="97.5dp"
        android:layout_marginTop="36.5dp"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:srcCompat="@drawable/google_logo" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="18dp"
        android:layout_height="25.99dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="-2dp"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="@+id/imageView5"
        app:srcCompat="@drawable/vector" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="23dp"
        android:layout_height="28.25dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="-1dp"
        app:layout_constraintStart_toEndOf="@+id/imageView6"
        app:layout_constraintTop_toTopOf="@+id/imageView6"
        app:srcCompat="@drawable/vector__1_" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="272dp"
        android:layout_height="34dp"
        android:layout_marginStart="58dp"
        android:layout_marginTop="48.01dp"
        android:fontFamily="@font/outfit_regular"
        android:text="@string/new_acc"
        android:textColor="#555454"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6" />
</androidx.constraintlayout.widget.ConstraintLayout>