<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="374dp"
        android:layout_height="280dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="169dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/group1" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="213dp"
        android:layout_height="43dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="31dp"
        android:lineHeight="43sp"
        android:fontFamily="@font/outfitsemibold"
        android:text="@string/textview"
        android:textColor="#000000"
        android:textSize="34sp"
        android:gravity="top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="364dp"
        android:layout_height="121dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/ubunturegular"
        android:gravity="center_horizontal|top"
        android:lineHeight="17sp"
        android:text="@string/textview1"
        android:textColor="#000000"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="77.00001dp"
        android:layout_height="14dp"
        android:layout_marginStart="156dp"
        android:layout_marginTop="113dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView4"
        app:srcCompat="@drawable/group_2" />

    <View
        android:id="@+id/view2"
        android:layout_width="178dp"
        android:layout_height="64dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="53dp"
        android:background="@drawable/rectangle_25"
        android:elevation="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <View
        android:id="@+id/view3"
        android:layout_width="339dp"
        android:layout_height="64dp"
        android:layout_marginStart="45dp"
        android:background="@drawable/rectangle_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view2" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="77dp"
        android:layout_height="31dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="17dp"
        android:elevation="1sp"
        android:fontFamily="@font/outfit_bold"
        android:lineHeight="28sp"
        android:text="@string/button"
        android:textColor="#FFFFFF"
        android:textSize="22sp"
        android:gravity="top"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/view2" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="102dp"
        android:layout_height="31dp"
        android:layout_marginStart="90dp"
        android:fontFamily="@font/outfit_bold"
        android:gravity="top"
        android:lineHeight="28sp"
        android:text="@string/button1"
        android:textColor="#FFFFFF"
        android:textSize="22sp"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/textView5" />


</androidx.constraintlayout.widget.ConstraintLayout>